--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,16 @@
   "author": "Saurabh",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.777.0",
-    "@aws-sdk/s3-request-presigner": "^3.777.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "validator": "^13.15.0"
